# hello-wasm.rs

./: Cargo.toml  README.md
src/: console.rs  main.rs
static/: index.html  index.js
