[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["menem salama <menem.slama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.6.0"
stdweb = "0.4.18"
instant = { version = "0.1", features = [ "stdweb" ] }
